# alpnest

./: .gitignore  Cargo.toml  README.md  alpnest-contract.md
data/: chatgpt.md  mail.context.md  projects.md  school.md  today.md
data/contents/00-today/: .today.cfg  context.md
data/contents/10-mail/: .mail.cfg  overview.md
data/contents/20-calendar/: .calendar.cfg  daily.context.md  daily.md  overview.md  weekly.context.md  weekly.md
data/panels/00-today/: overview.md  panel.toml
data/panels/10-school/: panel.toml
data/panels/20-projects/: overview.md  panel.toml
data/panels/30-mail/: panel.toml
data/panels/40-job/: overview.md  panel.toml
data/projects/: alpnest.md  hardware-security.md
data/projects/alpnest/: .alpnest.cfg  context.md  git.md  overview.md  prompt.md
data/projects/hardware-security/: .hardware-security.cfg  context.md
data/projects/leetcode-solutions/: .leetcode-solutions.cfg  context.md
data/projects/rv32i-mla/: context.md
scripts/: alpnest-add.py  alpnest-mail-sync.sh  alpnest-session.sh  alpnest.kdl  alpnestd.cfg  alpnestd.py  bootstrap_data.py  generate_mail_decomposition.py  generate_mail_view.py  mail_filters.cfg  paths.py  summarize_mail_local.py  sync_mail_apple.py
src/: app.rs  app_view.rs  content_editor.rs  content_writer.rs  embedded_terminal.rs  external_editor.rs  lib.rs  main.rs  panel_wizard.rs  panel_writer.rs  paths.rs  settings.rs
src/content/: mod.rs  model.rs  registry.rs
src/mail/: feed.rs  filters.rs  mod.rs  model.rs  render.rs  store.rs
src/ui/: main_explorer.rs  mod.rs
(+111 files in other folders)
