[package]
name = "alpnest"
version = "0.1.0"
edition = "2024"
default-run = "alpnest"

[dependencies]
ansi_to_tui = { version = "8.0.1", package = "ansi-to-tui" }
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
portable-pty = "0.9.0"
ratatui = "0.30.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
vt100 = "0.16.2"
